<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <!-- 
    deploy with (-X is for verbose error reporting): 
      mvn -Possrh clean deploy -X
    check results on:
      https://oss.sonatype.org/#nexus-search;quick~com.fillumina
  -->
  
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.fillumina</groupId>
  <artifactId>xjc-documentation-annotation-plugin</artifactId>
  <version>2.1.0</version>
  <packaging>jar</packaging>
  <name>xjc-documentation-annotation-plugin</name>
  
  <description>XSD descriptions into annotations of generated classes</description>
  <url>https://github.com/fillumina/xjc-documentation-annotation-plugin</url>
  
  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>  
  
  <scm>
    <connection>scm:git:git@github.com:fillumina/xjc-documentation-annotation-plugin.git</connection>
    <url>git@github.com:fillumina/xjc-documentation-annotation-plugin.git</url>
    <developerConnection>scm:git:git@github.com:fillumina/xjc-documentation-annotation-plugin.git</developerConnection>
  </scm>  
  
  <developers>
    <developer>
      <name>Francesco Illuminati</name>
      <email>fillumina@gmail.com</email>
    </developer>
    <developer>
      <name>Pavel Alexeev</name>
      <email>pahan@hubbitus.info</email>
    </developer>
  </developers>  
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>
  <dependencies>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <!-- JAXB Implementation -->
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>3.0.0</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>codemodel</artifactId>
      <version>4.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-xjc</artifactId>
      <version>4.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-core</artifactId>
      <version>3.8.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jvnet.jaxb2.maven2</groupId>
      <artifactId>maven-jaxb2-plugin-testing</artifactId>
      <version>0.15.1</version>
      <scope>test</scope>
    </dependency>        
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.10.1</version>
          <configuration>
            <source>11</source>
            <target>11</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
          <configuration>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>        
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>ossrh</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <phase>verify</phase>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <javadocExecutable>
                ${java.home}/bin/javadoc
              </javadocExecutable>
            </configuration>            
          </plugin>
          <plugin>
            <!-- https://central.sonatype.org/publish/publish-maven/#gpg-signed-components -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <keyname>${gpg.keyname}</keyname>
                  <passphraseServerId>${gpg.passphrase}</passphraseServerId>
                </configuration>                
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <!-- I'm on an old legacy repository... -->
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <!--<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>-->
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <!-- I'm on an old legacy repository... -->
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      <!--<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
    </repository>
  </distributionManagement>
  
</project>